# NeMo_App

./: .gitignore  RAG_BENCHMARK_HUB_REVIEW.md  README.md  docker-compose.yml  todo.md
backend/: Dockerfile  colbert_retriever.py  config.py  database_models.py  deps.py  enums.py  main.py  migrate_chroma_to_postgres.py  migrate_pgvector_to_qdrant.py  multi_embedder_manager.py  pyproject.toml  rag_components.py  schemas.py  test_colbert.py  test_colbert_real_documents.py  test_colbert_rerank.py  vectorstore_factory.py
backend/cli/: __init__.py  eval.py
backend/routers/: __init__.py  admin_router.py  agents_router.py  chat_router.py  chunking_router.py  config_router.py  dataset_router.py  document_router.py  evaluation_router.py  health_router.py  huggingface_router.py  model_router.py  processed_dataset_router.py  raw_dataset_router.py  template_router.py  upload_router.py
backend/schemas/: __init__.py  automation.py  chat.py  common.py  evaluation.py  experiment_template.py  health.py  models.py
backend/services/: chat.py  chunking.py  colbert_retriever.py  contamination_checker.py  dataset_registry.py  dataset_splitter.py  dataset_validator.py  dataset_versioner.py  document.py  embedding_service.py  eval_runner.py  eval_scorer.py  evaluation_metrics.py  evaluation_task_service.py  file_loader.py  health.py  huggingface.py  huggingface_dataset.py  lightweight_metadata_extractor.py  llm_metadata_extractor.py  migration.py  model.py  model_switch.py  nemo.py  openrouter_client.py  preprocessing_pipeline.py  processed_dataset.py  qa_generator.py  qdrant_vectorstore.py  raw_dataset.py  runtime_config.py  statistics.py  template_service.py  text_cleaners.py  upload.py
backend/tests/: __init__.py  test_chat_service.py  test_chunking.py  test_error_handling.py  test_file_loader.py  (+6 more)
(+173 files in other folders)
